tests/machine/x/cpp/group_by_join.error
/workspace/mochi/tests/machine/x/cpp/group_by_join.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by_join.cpp:80:5: error: conversion from ‘vector<__struct5>’ to non-scalar type ‘vector<Stat>’ requested
   55 |   std::vector<Stat> stats = ([&]() {
      |                             ~~~~~~~~
   56 |     std::vector<__struct4> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   57 |     for (auto o : orders) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~
   58 |       for (auto c : customers) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
   59 |         if (!((o.customerId == c.id)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   60 |           continue;
      |           ~~~~~~~~~
   61 |         auto __key = c.name;
      |         ~~~~~~~~~~~~~~~~~~~~
   62 |         bool __found = false;
      |         ~~~~~~~~~~~~~~~~~~~~~
   63 |         for (auto &__g : __groups) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   64 |           if (__any_eq(__g.key, __key)) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   65 |             __g.items.push_back(Stat{o, c});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   66 |             __found = true;
      |             ~~~~~~~~~~~~~~~
   67 |             break;
      |             ~~~~~~
   68 |           }
      |           ~
   69 |         }
      |         ~
   70 |         if (!__found) {
      |         ~~~~~~~~~~~~~~~
   71 |           __groups.push_back(__struct4{__key, std::vector<Stat>{Stat{o, c}}});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   72 |         }
      |         ~
   73 |       }
      |       ~
   74 |     }
      |     ~
   75 |     std::vector<__struct5> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   76 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
   77 |       __items.push_back(__struct5{g.key, ((int)g.items.size())});
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   78 |     }
      |     ~
   79 |     return __items;
      |     ~~~~~~~~~~~~~~~
   80 |   })();
      |   ~~^~
/workspace/mochi/tests/machine/x/cpp/group_by_join.cpp:84:22: error: ‘struct Stat’ has no member named ‘name’
   84 |       std::cout << s.name;
      |                      ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_join.cpp:88:22: error: ‘struct Stat’ has no member named ‘count’
   88 |       std::cout << s.count;
      |                      ^~~~~
